--- a/app/src/main/res/layout/activity_bioskop.xml
+++ b/app/src/main/res/layout/activity_bioskop.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".bioskop.BioskopActivity"
+    tools:context=".BioskopActivity"
     android:background="@color/black">
 
     <androidx.appcompat.widget.Toolbar
@@ -184,8 +184,22 @@
             android:onClick="onClick"
             android:src="@drawable/ic_home_nactive"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/bioskop"
+            app:layout_constraintEnd_toStartOf="@+id/film"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/film"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="onClick"
+            android:src="@drawable/ic_film"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bioskop"
+            app:layout_constraintStart_toEndOf="@+id/home"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -201,7 +215,7 @@
             android:src="@drawable/ic_bioskop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/profile"
-            app:layout_constraintStart_toEndOf="@+id/home"
+            app:layout_constraintStart_toEndOf="@+id/film"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
