--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,41 +111,23 @@
             app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />
 
 
-        <LinearLayout
-            android:id="@+id/btnSocialLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="42dp"
+        <Button
+            android:id="@+id/btnGmailLogin"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="28dp"
+            android:backgroundTint="@color/white"
+            android:text="Login with Google"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/txtTerms"
-            app:layout_constraintTop_toBottomOf="@id/txtRegister">
+            app:layout_constraintTop_toBottomOf="@id/txtRegister"
+            app:layout_constraintWidth_percent="0.8"
+            app:iconPadding="8dp"
+            app:iconGravity="textStart"/>
 
-            <ImageView
-                android:id="@+id/btnGmailLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/gmail"
-                android:padding="10dp"
-                android:src="@drawable/ic_gmail"/>
-
-            <ImageView
-                android:id="@+id/btnFacebookLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/facebook"
-                android:padding="10dp"
-                android:src="@drawable/ic_facebook" />
-
-            <ImageView
-                android:id="@+id/btnTwitterLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/twitter"
-                android:padding="10dp"
-                android:src="@drawable/ic_twitter"/>
-        </LinearLayout>
 
         <TextView
             android:id="@+id/txtTerms"
@@ -158,7 +140,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnSocialLogin" />
+            app:layout_constraintTop_toBottomOf="@id/btnGmailLogin" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
