--- a/app/src/main/res/layout/activity_starred_cinema.xml
+++ b/app/src/main/res/layout/activity_starred_cinema.xml
@@ -6,7 +6,7 @@
     android:background="@color/black">
 
     <LinearLayout
-        android:id="@+id/tvTitle"
+        android:id="@+id/headerBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
@@ -18,17 +18,14 @@
             android:id="@+id/btnBack"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:contentDescription="Button back"
             android:src="@drawable/ic_back" />
 
         <TextView
-            android:id="@+id/textfilm"
+            android:id="@+id/textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
             android:text="Bioskop Star Saya"
             android:textColor="@color/white"
             android:textSize="25sp" />
